[tool.poetry]
name = "real-python-datetime"
version = "0.1.0"
description = "Code from Real Python article on using datetime module to work with dates and times"
authors = ["Larry Jones <larry.jones@reveal-energy.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
ipython = "^7.20.0"
jupyterlab = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
